--- a/SignDetection.ipynb
+++ b/SignDetection.ipynb
@@ -1,9 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 1: Create the Paths and set up a Label Map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d404c013",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8e968e44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +46,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating a TF Record - the generate_tfrecord.py can be found here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'https://tensorflow-object-detection-api-tutorial.readthedocs.io/en/latest/_downloads/da4babe668a8afb093cc7776d7e630f3/generate_tfrecord.py'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b11d4e67",
    "metadata": {},
    "outputs": [
     {
@@ -63,26 +81,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "49fa2c23",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'models'...\n",
-      "remote: Enumerating objects: 58275, done.\u001b[K\n",
-      "remote: Counting objects: 100% (65/65), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (65/65), done.\u001b[K\n",
-      "remote: Total 58275 (delta 29), reused 36 (delta 0), pack-reused 58210\u001b[K\n",
-      "Receiving objects: 100% (58275/58275), 573.03 MiB | 6.58 MiB/s, done.\n",
-      "Resolving deltas: 100% (40458/40458), done.\n",
-      "Updating files: 100% (2485/2485), done.\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Downloading Pre-Trained TF Models and setting a path in training folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#Downloading Pre-trained Models from TF Models \n",
     "!cd Tensorflow && git clone https://github.com/tensorflow/models.git"
@@ -91,7 +98,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f429e3c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +107,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d1998bee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +115,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modifying Config file for transfer learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "531a13ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +137,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "800f4222",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +147,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f4ae9f81",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +354,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2fdbe341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +366,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c7e1448f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +382,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1b6cd904",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +592,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9d90ff52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,9 +601,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training the Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "299b10ce",
    "metadata": {},
    "outputs": [
     {
@@ -615,9 +626,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading latest trained model from checkpoint"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2809ee18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +648,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d532c5a8",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +674,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4b5b07e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,9 +687,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Starting the Real-time-detection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "784a2b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +707,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fcba71d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +716,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d5a7dd4e",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +751,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b191150a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +763,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c7958a16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +805,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fef9893a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
